--- a/preseed.cfg
+++ b/preseed.cfg
@@ -41,15 +41,15 @@ d-i partman/confirm_nooverwrite boolean true
 
 ### Configuration des utilisateurs ###
 # Mot de passe root chiffré (généré avec mkpasswd -m sha-512)
-d-i passwd/root-password-crypted password $6$xyz$abcdefghijklmnopqrstuvwxyz
+d-i passwd/root-password-crypted password ZoF3rY/ijWygA
 # Création du premier utilisateur
 d-i passwd/user-fullname string Utilisateur1
 d-i passwd/username string user1
-d-i passwd/user-password-crypted password $6$abc$123456789
+d-i passwd/user-password-crypted password ZoF3rY/ijWygA
 # Création du deuxième utilisateur
 d-i passwd/user-fullname string Utilisateur2
 d-i passwd/username string user2
-d-i passwd/user-password-crypted password $6$abc$123456789
+d-i passwd/user-password-crypted password ZoF3rY/ijWygA
 
 ### Selection des paquets ###
 tasksel tasksel/first multiselect standard
@@ -60,7 +60,7 @@ d-i pkgsel/upgrade select full-upgrade
 ### Configuration finale ###
 # Commandes à exécuter à la fin de l'installation
 d-i preseed/late_command string \
-    in-target sh -c 'useradd -m -p "$6$def$987654321" user2'; \
+    in-target sh -c 'useradd -m -p "ZoF3rY/ijWygA" user2'; \
     in-target sh -c 'echo "Hello World!" > /home/helloworld.txt'; \
     in-target chmod 644 /home/helloworld.txt
 
