--- a/preseed.cfg
+++ b/preseed.cfg
@@ -42,14 +42,15 @@ d-i partman/confirm_nooverwrite boolean true
 ### Configuration des utilisateurs ###
 # Mot de passe root chiffré (généré avec mkpasswd -m sha-512)
 d-i passwd/root-password-crypted password ZoF3rY/ijWygA
+
 # Création du premier utilisateur
 d-i passwd/user-fullname string Utilisateur1
 d-i passwd/username string user1
 d-i passwd/user-password-crypted password ZoF3rY/ijWygA
-# Création du deuxième utilisateur
-d-i passwd/user-fullname string Utilisateur2
-d-i passwd/username string user2
-d-i passwd/user-password-crypted password ZoF3rY/ijWygA
+
+# Création du deuxième utilisateur via late_command
+d-i preseed/late_command string \
+in-target useradd -m -p 'ZoF3rY/ijWygA' -s /bin/bash -c "Utilisateur2" user2
 
 ### Selection des paquets ###
 tasksel tasksel/first multiselect standard
